--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-  <p>Hello Reiwa!</p>
-  by tkr
+  <div>Hello Reiwa!</div>
+  <div>こんにちは令和！</div>
+  <div>by <a href="https://twitter.com/kgtkr">tkr</a></div>
 </body>
 
 </html>
