--- a/index.html
+++ b/index.html
@@ -3,12 +3,31 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="shortcut icon" href="favicon.ico">
   <title>reiwa.page</title>
+  <meta property="og:title" content="reiwa.page" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://reiwa.page/" />
+  <meta property="og:image" content="image.jpg" />
+  <meta property="og:site_name" content="reiwa.page" />
+  <meta property="og:description" content="reiwa.page" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@kgtkr" />
 </head>
 
 <body>
-  <div>Hello Reiwa!</div>
-  <div>こんにちは令和！</div>
+  <main>
+    <div>
+      Hello Reiwa!
+      <br>
+      こんにちは令和！
+    </div>
+    <div>
+      <img src="image.jpg" style="width:50vw;">
+      <br>
+      ↑何か見えた
+    </div>
+  </main>
   <div>by <a href="https://twitter.com/kgtkr">tkr</a></div>
 </body>
 
