--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="reiwa.page" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://reiwa.page/" />
-  <meta property="og:image" content="image.jpg" />
+  <meta property="og:image" content="https://reiwa.page/image.jpg" />
   <meta property="og:site_name" content="reiwa.page" />
   <meta property="og:description" content="reiwa.page" />
   <meta name="twitter:card" content="summary_large_image" />
