--- a/index.html
+++ b/index.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/jpg" href="./image.jpg" />
+    <title>reiwa.page</title>
+    <meta property="og:title" content="reiwa.page" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://reiwa.page/" />
+    <meta property="og:image" content="https://reiwa.page/image.jpg" />
+    <meta property="og:site_name" content="reiwa.page" />
+    <meta property="og:description" content="reiwa.page" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@kgtkr" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="shortcut icon" href="favicon.ico">
-  <title>reiwa.page</title>
-  <meta property="og:title" content="reiwa.page" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://reiwa.page/" />
-  <meta property="og:image" content="https://reiwa.page/image.jpg" />
-  <meta property="og:site_name" content="reiwa.page" />
-  <meta property="og:description" content="reiwa.page" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@kgtkr" />
-</head>
-
-<body>
-  <main>
+  <body>
+    <main>
+      <div>
+        Hello Reiwa!
+        <br />
+        こんにちは令和！
+      </div>
+      <img src="image.jpg" />
+    </main>
     <div>
-      Hello Reiwa!
-      <br>
-      こんにちは令和！
+      GitHub: <a href="https://github.com/kgtkr/reiwa.page">kgtkr/reiwa.page</a>
     </div>
-    <div>
-      <img src="image.jpg" style="width:50vw;">
-      <br>
-      ↑何か見えた
-    </div>
-  </main>
-  <div>by <a href="https://twitter.com/kgtkr">tkr</a></div>
-</body>
-
+  </body>
 </html>
